dada_tests/ty_parsing/perms_with_parens_but_no_paths/compiler-output.ref
Error: no paths are needed after the `my` permission
   ╭─[dada_tests/ty_parsing/perms_with_parens_but_no_paths.dada:4:18]
   │
 4 │ class List1(v: my() Value) #! ERROR no paths are needed after the `my` permission
   ·                  ─┬  
   ·                   ╰── here
───╯
Error: no paths are needed after the `our` permission
   ╭─[dada_tests/ty_parsing/perms_with_parens_but_no_paths.dada:5:19]
   │
 5 │ class List2(v: our() Value) #! ERROR no paths are needed after the `our` permission
   ·                   ─┬  
   ·                    ╰── here
───╯
